--- a/practice-1/src/index.css
+++ b/practice-1/src/index.css
@@ -54,6 +54,12 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+.cancelled-span {
+  color: grey;
+  position: absolute;
+  padding-left: 0.5rem;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
