--- a/practice-4/src/components/Sidebar/index.scss
+++ b/practice-4/src/components/Sidebar/index.scss
@@ -18,6 +18,33 @@
   a {
     text-decoration: none;
   }
+
+  .nav-bar-footer {
+    height: 100%;
+    bottom: 0;
+    width: 100%;
+    display: block;
+    padding: 2rem 0 0 0;
+    list-style: none;
+    text-align: center;
+    margin: 0;
+    background-color: rgb(193, 224, 235);
+
+    a {
+      padding: 2rem;
+      line-height: 1rem;
+      color: black;
+    }
+
+    svg {
+      color: gray;
+    }
+
+    a:hover svg {
+      color: black;
+      transition: all 0.35s ease-out;
+    }
+  }
 }
 
 nav {
