--- a/practice-4/src/components/Overview/index.scss
+++ b/practice-4/src/components/Overview/index.scss
@@ -1,6 +1,8 @@
 .container {
-  height: 100%;
-  position: relative;
+  position: absolute;
   left: 50%;
-  right: 50%;
+
+  ul {
+    list-style: none;
+  }
 }
